--- a/Data Preprocessing/Data Preprocessing.ipynb
+++ b/Data Preprocessing/Data Preprocessing.ipynb
@@ -302,7 +302,7 @@
     "lbe_x = LabelEncoder()\n",
     "x.iloc[:, 0] = lbe_x.fit_transform(x.iloc[:, 0])\n",
     "\n",
-    "# cearte dumey variable with encoder object\n",
+    "# cearte dummy variable with encoder object\n",
     "ohe_x = OneHotEncoder(categorical_features = [0])\n",
     "x = ohe_x.fit_transform(x).toarray()\n",
     "\n",
