all about preprocessing the data

--- a/Data Preprocessing/Data Preprocessing.ipynb
+++ b/Data Preprocessing/Data Preprocessing.ipynb
@@ -15,6 +15,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
    ]
@@ -231,7 +232,7 @@
    "source": [
     "from sklearn.preprocessing import Imputer\n",
     "\n",
-    "# create imputer objcet for a particular columns for the missing data\n",
+    "# create imputer objcet for the missing data column\n",
     "imp_obj = Imputer(missing_values = np.NaN, strategy = \"mean\", axis = 0).fit(x.iloc[:, 1:])\n",
     "\n",
     "# tarnsform the missing data to the new non-missing data\n",
@@ -299,10 +300,10 @@
     }
    ],
    "source": [
-    "lbe_x = LabelEncoder()\n",
-    "x.iloc[:, 0] = lbe_x.fit_transform(x.iloc[:, 0])\n",
+    "le_x = LabelEncoder()\n",
+    "x.Country = le_x.fit_transform(x.Country)\n",
     "\n",
-    "# cearte dummy variable with encoder object\n",
+    "# cearte dummy variables with encoder object\n",
     "ohe_x = OneHotEncoder(categorical_features = [0])\n",
     "x = ohe_x.fit_transform(x).toarray()\n",
     "\n",
@@ -333,8 +334,8 @@
     }
    ],
    "source": [
-    "lbe_y = LabelEncoder()\n",
-    "y = lbe_y.fit_transform(y)\n",
+    "le_y = LabelEncoder()\n",
+    "y = le_y.fit_transform(y)\n",
     "\n",
     "y"
    ]
@@ -349,21 +350,10 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\amgd\\Anaconda3\\lib\\site-packages\\sklearn\\cross_validation.py:41: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "train_x, test_x, train_y, test_y = train_test_split(x, y, test_size = 0.3, random_state = 2)"
    ]
@@ -403,7 +393,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x22caa579828>]"
+       "[<matplotlib.lines.Line2D at 0x2ae08faa3c8>]"
       ]
      },
      "execution_count": 10,
