--- a/Regression/Polynomial Regression/polynomial_regression.ipynb
+++ b/Regression/Polynomial Regression/polynomial_regression.ipynb
@@ -165,7 +165,7 @@
     "# Fitting Linear Regression to the dataset\n",
     "from sklearn.linear_model import LinearRegression\n",
     "linear_regressor = LinearRegression()\n",
-    "linear_regressor = linear_regressor.fit(x, y)\n",
+    "linear_regressor.fit(x, y)\n",
     "\n",
     "ypredicted = linear_regressor.predict(x)\n",
     "print(\"The Accuracy = {0:0.2f}%\".format(linear_regressor.score(x, y) * 100))"
