--- a/Regression/Simple Linear Regression/simple_linear_regression.ipynb
+++ b/Regression/Simple Linear Regression/simple_linear_regression.ipynb
@@ -124,7 +124,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2d6acc16390>]"
+       "[<matplotlib.lines.Line2D at 0x1fee3a38390>]"
       ]
      },
      "execution_count": 5,
@@ -178,8 +178,8 @@
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
-    "lr = LinearRegression()\n",
-    "lr.fit(xtrain, ytrain)"
+    "regressor = LinearRegression()\n",
+    "regressor.fit(xtrain, ytrain)"
    ]
   },
   {
@@ -208,7 +208,7 @@
     }
    ],
    "source": [
-    "y_pred = lr.predict(xtest)\n",
+    "y_pred = regressor.predict(xtest)\n",
     "y_pred"
    ]
   },
@@ -218,19 +218,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.9740993407213511"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Accuracy = 97.41%\n"
+     ]
     }
    ],
    "source": [
-    "my_score = lr.score(xtest, ytest)\n",
-    "my_score"
+    "print(\"The Accuracy = {0:0.2f}%\".format(regressor.score(xtest, ytest) * 100))"
    ]
   },
   {
@@ -241,7 +237,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2d6ade7a9e8>]"
+       "[<matplotlib.lines.Line2D at 0x1fee4ca0a20>]"
       ]
      },
      "execution_count": 9,
@@ -269,7 +265,7 @@
     "plt.plot(xtrain, ytrain, marker = 'o', markeredgecolor = 'red', color = 'white', markersize = 8, linestyle = '')\n",
     "plt.plot(xtest, ytest, marker = 'o', markeredgecolor = 'blue', color = 'white', markersize = 8, linestyle = '')\n",
     "\n",
-    "plt.plot(xtrain, lr.predict(xtrain), marker = '', color = 'black', linestyle = '-', linewidth = 0.5)"
+    "plt.plot(xtrain, regressor.predict(xtrain), marker = '', color = 'black', linestyle = '-', linewidth = 0.5)"
    ]
   }
  ],
