--- a/Classification/K-Nearest Neighbors (K-NN)/knn.ipynb
+++ b/Classification/K-Nearest Neighbors (K-NN)/knn.ipynb
@@ -107,7 +107,7 @@
    ],
    "source": [
     "# Importing the dataset\n",
-    "dataset = pd.read_csv(\"Social_Network_Ads.csv\")\n",
+    "dataset = pd.read_csv(\"./../Social_Network_Ads.csv\")\n",
     "dataset.head()"
    ]
   },
